--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,20 @@ dependencies:
   cupertino_icons: ^1.0.6  
   carousel_slider: ^4.2.1
   flutter_screenutil: ^5.9.0
-  convex_bottom_bar: ^3.2.0
-  firebase_core: ^2.21.0  
-  google_sign_in: ^6.2.0
-  provider: ^6.0.5
-  font_awesome_flutter: ^10.6.0 
+#firebase
+  cloud_firestore: ^4.13.5
   firebase_auth: ^4.12.0  
   firebase_analytics: ^10.6.3
+  firebase_core: ^2.21.0  
+  google_sign_in: ^6.2.0
+
+#state management
+  provider: ^6.1.1
+  convex_bottom_bar: ^3.2.0
+  font_awesome_flutter: ^10.6.0 
+
   auto_size_text: ^3.0.0
-  cloud_firestore: ^4.13.5
+
   url_launcher: ^6.2.2
   
 dev_dependencies:
