--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   auto_size_text: ^3.0.0
 
   url_launcher: ^6.2.2
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
+  flutter_cache_manager: ^3.3.1
   
 dev_dependencies:
   flutter_test:
