--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
+  like_button: ^2.0.5
   
 dev_dependencies:
   flutter_test:
