--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
   like_button: ^2.0.5
+  flutter_color_picker_wheel: ^0.0.1
   
 dev_dependencies:
   flutter_test:
